Added basic style

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="Pokemon"
-      content="Test pokemon web site"
-    />
+    <meta name="Pokemon" content="Test pokemon web site"/>
+
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
+
     <title>Pokemon Application</title>
   </head>
   <body>
